# viennamaterials-dev

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  build.sh  clean.sh  run.sh  wscript
ViennaMaterials/: library.hpp  vmat.hpp
database/: materials.xml  viennamaterials.dtd
doc/: Doxyfile
examples/: CMakeLists.txt  clean.sh  ex1.cpp  run.sh  wscript
examples/data/: input1.ipd  material_test.xml  material_wip.xml
examples/src/: ex1.cpp  viennamaterials_test.cpp  vmat.cpp
examples/src/old/: vmat_dyn.cpp
examples/tutorial/: CMakeLists.txt  bench.cpp  client.py  functionbackend-demo.cpp  material_library.cpp  native.cpp  native_proxy.cpp  proxy.cpp  python.py  server.py  units.cpp
python/: CMakeLists.txt  pyviennamaterials.i
src/: attributeentity.cpp  attributeentitycluster.cpp  attributeentityfunction.cpp  attributeentityscalar.cpp  attributeentitystring.cpp  attributefunction.cpp  attributefunctionproxy.cpp  attributefunctionpython.cpp  broker.cpp  functionbackendpython.cpp  generate_query_string.cpp  generator.cpp  library.cpp  libraryxpath.cpp  proxy.cpp  pugixml.cpp  quantity.cpp  write_query.cpp  xmlvalueentity.cpp  xmlvaluescalar.cpp
src/proxy/: viennastar.cpp
src/utils/: udunits.cpp
tests/: CMakeLists.txt  CTestConfig.cmake  library.cpp  run_regression.sh
tests/input/: test.xml
tests/src/: library.cpp  native.cpp  native_proxy.cpp  proxy.cpp  strings.cpp  units.cpp
tools/: CMakeLists.txt  verify_material_database.sh  viennamaterials.dtd
tools/ipd2xml/: .gitignore  CMakeLists.txt  ipd2xml.cpp  ipd2xml.hpp
tools/ipd2xml/ViennaIPD/: CMakeLists.txt
tools/ipd2xml/ViennaIPD/src/: ipdbuiltin.c  ipdcontrol.c  ipddatabase.c  ipderror.c  ipdfunc.c  ipdlibdef.c  ipdlisp.c  ipdparse.c  ipdscan.c  ipdstring.c  ipdtime.c
tools/ipd2xml/ViennaIPD/src/core/error/: veinit.c  verrc.c  verror.c  vestring.c  vexit.c
tools/ipd2xml/ViennaIPD/src/core/include/: machine.h  project.h  unit.h  unitP.h  vdir.h  vdirP.h  vemacros.h  verr.h  verrP.h  vestring.h  vexit.h  vos.h  vosP.h  vossysP.h
tools/ipd2xml/ViennaIPD/src/core/sys/: vdir.c  vosconv.c  vosdir.c  vosfunc.c  vospath.c  vosuser.c
tools/ipd2xml/ViennaIPD/src/core/unit/: unitconv.c
tools/ipd2xml/ViennaIPD/src/include/: ipd.h  ipdP.h  ipdlisp.h  ipdparse.ah  ipdstring.h  ipdtime.h  ipdtype.h
tools/ipd2xml/tinyxml/: CMakeLists.txt
tools/ipd2xml/tmp/: example.ipd
units/: units.xml
viennamaterials/: attributeentity.hpp  attributeentitycluster.hpp  attributeentityfunction.hpp  attributeentityscalar.hpp  attributeentitystring.hpp  attributefunction.h  attributefunctionproxy.h  attributefunctionpython.h  backend.hpp  base_accessor.hpp  broker.hpp  check.hpp  exceptions.hpp  forwards.h  functionbackend.hpp  functionbackendpython.hpp  generate_attribute.hpp  generator.hpp  io.hpp  library.hpp  libraryinterface.hpp  libraryxpath.hpp  make_query.hpp  markup.hpp  parameter_extractor.hpp  platform.hpp  proxy.hpp  pugixml.hpp  quantity.hpp  tools.hpp  utils.hpp  write_query.hpp  xmldatatypes.h  xmlvalueentity.hpp  xmlvaluescalar.hpp
viennamaterials/kernels/: pugixml.hpp  pugixml_dyn.hpp_old
viennamaterials/proxy/: viennastar.hpp
viennamaterials/utils/: convert.hpp  file_extension.hpp  shared_ptr.hpp  string.hpp  udunits.hpp
waftools/: viennautils.py
