

#SET(TARGET vmat)
#ADD_EXECUTABLE(${TARGET} src/vmat.cpp)
#TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARIES})

#SET(TARGET vmat_dyn)
#ADD_EXECUTABLE(${TARGET} src/vmat_dyn.cpp)
#TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARIES})

SET(TARGET vmat)
ADD_EXECUTABLE(${TARGET} src/vmat.cpp)
TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARIES})


