

#SET(TARGET vmat)
#ADD_EXECUTABLE(${TARGET} src/vmat.cpp)
#TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARIES})

#SET(TARGET vmat_dyn)
#ADD_EXECUTABLE(${TARGET} src/vmat_dyn.cpp)
#TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARIES})

SET(TARGET ex1)
ADD_EXECUTABLE(${TARGET} src/${TARGET}.cpp)
TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARIES})
