

ADD_EXECUTABLE(native native.cpp)
TARGET_LINK_LIBRARIES(native ${LIBRARIES})

ADD_EXECUTABLE(proxy proxy.cpp)
TARGET_LINK_LIBRARIES(proxy ${LIBRARIES})

INSTALL(TARGETS native proxy DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)

IF(UDUNITS_FOUND)
ADD_EXECUTABLE(units units.cpp)
TARGET_LINK_LIBRARIES(units ${LIBRARIES})
INSTALL(TARGETS units DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
ENDIF(UDUNITS_FOUND)

IF(SWIG_FOUND)
INSTALL(FILES python.py DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
ENDIF(SWIG_FOUND)
